Test allure enums is add