@@ -1,8 +1,10 @@
 package tests;
 
+import io.qameta.allure.*;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
+import static enums.TitleNaming.PRODUCTS;
 import static org.testng.Assert.assertTrue;
 import static org.testng.Assert.assertEquals;
 import static user.UserFactory.withAdminPermission;
@@ -10,13 +12,13 @@ import static user.UserFactory.withAdminPermission;
 public class LoginTest extends BaseTest {
     @Test(invocationCount = 1, priority = 2, enabled = true)
     public void correctLogin() {
-        System.out.println("LoginTest.correct !!!!! in tread: " + Thread.currentThread().getId());
+        System.out.println("LoginTest.correct !!!!! in tread: " + Thread.currentThread().threadId());
 
         loginPage.open();
         loginPage.login(withAdminPermission());
 
         assertTrue(productsPage.isTitleIsDisplayed(), "Заголовок не виден");
-        assertEquals(productsPage.checkTitleName(), "Products", "Не верный заголовок");
+        assertEquals(productsPage.checkTitleName(), PRODUCTS.getDisplayName(), "Не верный заголовок");
     }
 
     @DataProvider(name = "incorrectLoginData")
@@ -29,9 +31,16 @@ public class LoginTest extends BaseTest {
         };
     }
 
+    @Epic("Тестирование интернет-площадки")
+    @Feature("Проверка расчета скидки")
+    @Story("ABCD")
+    @Severity(SeverityLevel.NORMAL)
+    @Owner("Kseniia Kozyreva")
+    @TmsLink("SkyrexioAuto")
+    @Issue("SkyrexioAuto")
     @Test(dataProvider = "incorrectLoginData", description = "тест проверяет аворизацию заблокированного пользователя", invocationCount = 1, priority = 3)
     public void incorrectLogin(String user, String password, String errorMsg) {
-        System.out.println("LoginTest.incorrect !!!!! in tread: " + Thread.currentThread().getId());
+        System.out.println("LoginTest.incorrect !!!!! in tread: " + Thread.currentThread().threadId());
 
         loginPage.open();
         loginPage.login(user, password);
